add button to change grid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="mainContainer"></div>
+    <div class="header">
+        <button class="gridBtn">GRID SIZE</button>
+    </div>
+    <div></div>
     <script src="eas_script.js"></script>
 </body>
 </html>
